# cpp_database_llm

./: .gitignore  CMakeLists.txt  README.md
src/: database.cpp  database.h  llm.cpp  llm.h  main.cpp
